src/app/global.css
@font-face {
  font-family: 'PP Fragment Light';
  src: url('/fonts/PPFragment-GlareLight.ttf') format('truetype');
  font-weight: 300 !important;
  font-style: normal;
}

@font-face {
  font-family: 'PP Fragment Variable';
  src: url('/fonts/PPFragment-GlareVariable.ttf') format('truetype');
  font-weight: 100 900;
  font-style: normal;
}

@font-face {
  font-family: 'Zoom Pro Wide';
  src: url('/fonts/Zoom Pro Wide Regular.woff2') format('woff2');
  font-weight: normal;
  font-style: normal;
}

body {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: "PP Fragment Light";
  font-weight: 300 !important;
  background-color: #fff;
  /* background-color: #e5e5e5; */
}

/* .custom-cursor {
  transition: transform 0.5s ease;
} */

.cursor-hidden,
.cursor-hidden * {
  cursor: none !important;
}

/* .hide-native-cursor,
.hide-native-cursor * {
  cursor: none !important;
}

body.cursor-hidden,
body.cursor-hidden * {
  cursor: none !important;
}

body.hide-native-cursor, 
body.hide-native-cursor * {
  cursor: none !important;
} */


.aspect-16-9 {
  aspect-ratio: 16 / 9;
}

.aspect-4-3 {
  aspect-ratio: 4 / 3;
}

.aspect-1-1 {
  aspect-ratio: 1 / 1;
}

.container {
  padding-left: 0px;
  padding-right: 0px;
  max-width: 100%;
}

.no-scrollbar::-webkit-scrollbar {
  display: none !important;
}

.designer-description {
  p {
    font-size: 18px;
    line-height: 26px;
  }
}

.description-home {
  p {
    font-family: "PP Fragment Light";
    font-size: 45px;
    line-height: 52px;
    font-weight: 300;
  }
  div {
    font-family: "PP Fragment Light";
    font-size: 45px;
    line-height: 52px;
    font-weight: 300;
  }
}

.information-home-title {
  p {
    font-size: 26px;
    line-height: 35px;
  }
  div {
    font-size: 26px;
    line-height: 35px;
  }
}

.information-home-description {
  p {
    font-size: 35px;
    line-height: 45px;
  }
  div {
    font-size: 35px;
    line-height: 45px;
  }
}

.contact-information {
  p {
    font-size: 16px;
    line-height: 22px;
    text-align: center;
  }
  div {
    font-size: 16px;
    line-height: 22px;
    text-align: center;
  }
}

.description-cards-home {
  p {
    font-size: 18px;
    line-height: 23px;
  }
  div {
    font-size: 18px;
    line-height: 23px;
  }
}

.call-title {
  p {
    font-size: 35px;
    line-height: 45px;
    text-align: center;
  }
  div {
    font-size: 35px;
    line-height: 45px;
    text-align: center;
  }
}

/* .cursor-custom-arrow {
  cursor: url("/images/cursor-arrow.svg") 8 8, auto;
}

.custom-cursor {
  transition: transform 0.5s ease;
} */

.introduction-title {
  p {
    font-size: 18px;
    line-height: 22px;
  }
  div {
    font-size: 18px;
    line-height: 22px;
  }
}


@media (max-width: 768px) {

  .description-cards-home {
    p {
      font-size: 16px;
      line-height: 22px;
    }
    div {
      font-size: 16px;
      line-height: 22px;
    }
  }

  .description-home {
    p {
      font-size: 30px;
      line-height: 37px;
    }
    div {
      font-size: 30px;
      line-height: 37px;
    }
  }

  .information-home-title {
    p {
      font-size: 26px;
      line-height: 35px;
    }
    div {
      font-size: 26px;
      line-height: 35px;
    }
  }

  .information-home-description{
    p {
      font-size: 16px;
      line-height: 22px;
    }
    div {
      font-size: 16px;
      line-height: 22px;
    }
  }

  .designer-description {
    p {
      font-size: 16px;
      line-height: 22px;
    }
  }
  
  .call-title {
    p {
      font-size: 30px;
      line-height: 37px;
      text-align: center;
    }
    div {
      font-size: 30px;
      line-height: 37px;
      text-align: center;
    }
  }
}

.scale-100 {
  /* transform: scale(1); */
  width: auto; /* fijo */
  height: 365px; /* fijo */
}

.scale-75 {
  /* transform: scale(0.75); */
  width: auto; /* mismo ancho para evitar layout shift */
  height: 365px;
}

